--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="col-sm-12 col-lg-6 text-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>VJ Lazaraga</h1>
       <h2>Quality Assurance | Bussiness Analyst | Project Management</h2>
-      <a href="./assets/CV.png" target="_blank" class="btn-about">Download My CV</a>
+      <a href="./assets/CV.pdf" target="_blank" class="btn-about">Download My CV</a>
     </div>
   </section>
   <!-- End Hero -->
@@ -93,7 +93,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content">
           <h3>Quality Assurance | Bussiness Analyst | Project Management</h3>
           <p class="fst-italic">
-            Experienced Software Quality Assurance professional with 1.5
+            Experienced Software Quality Assurance professional with 4
             years of hands-on expertise, adept in software testing, Project
             Management, and Business Analysis. Recognized for exceptional
             communication, teamwork, and adaptability under pressure.
@@ -104,7 +104,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-rounded-right"></i> <strong>Contact Number:</strong> +639 919789427</li>
+                <li><i class="bi bi-rounded-right"></i> <strong>Contact Number:</strong>+63 960 686 7688</li>
                 <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> vjlazaraga@gmail.com</li>
                 <li><i class="bi bi-rounded-right"></i> <strong>Location:</strong> Disiplina Village, Ugong, Valenzuela City</li>
               </ul>
@@ -130,6 +130,19 @@
       </div>
 
       <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box iconbox-yellow">
+            <div class="icon">
+              <img src="assets/img/projects/gcash.png" alt="" height="100">
+            </div>
+            <h4>GCash</h4>
+            <strong class="text-muted">Software Quality Assurance</strong>
+            <br>
+            <br>
+            <p>GCash is a user-friendly financial super app that simplifies everyday transactions by enabling users to pay bills, send money, shop online, and access savings, loans, and insurance. With GCash, Filipinos can manage their finances securely using just their mobile numbers, making digital financial services accessible and convenient for all.</p>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box iconbox-yellow">
             <div class="icon">
