chore: update cv and experince 2026

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <ul>
                 <li><i class="bi bi-rounded-right"></i> <strong>Contact Number:</strong>+63 960 686 7688</li>
                 <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> vjlazaraga@gmail.com</li>
-                <li><i class="bi bi-rounded-right"></i> <strong>Location:</strong> Disiplina Village, Ugong, Valenzuela City</li>
+                <li><i class="bi bi-rounded-right"></i> <strong>Location:</strong> Ugong, Valenzuela City</li>
               </ul>
             </div>
           </div>
